tests/invalid/invalid-030.inox
Module Invalid

Main() :
    repeat
        until 123
    ;
;
